# StockGlide

./: .gitignore  README.md
stockglide/: middleware.ts  next.config.ts  package-lock.json  package.json
stockglide-backend/: Cargo.toml
stockglide-backend/migrations/: 20250403032601_create_users_table.sql
stockglide-backend/src/: main.rs
stockglide-backend/src/config/: mod.rs
stockglide-backend/src/errors/: mod.rs
stockglide-backend/src/handlers/: auth.rs  profile.rs
stockglide-backend/src/models/: mod.rs  user.rs
stockglide-backend/src/services/: auth_service.rs  mod.rs
stockglide/.next/: app-build-manifest.json
stockglide/.next/cache/: .rscinfo
stockglide/.next/server/: app-paths-manifest.json  middleware-manifest.json  next-font-manifest.js  next-font-manifest.json  server-reference-manifest.js  server-reference-manifest.json
stockglide/.next/server/app/: page.js  page_client-reference-manifest.js
stockglide/.next/server/chunks/: [root of the server]__7036ec80._.js  [root of the server]__7036ec80._.js.map  [root of the server]__823ce213._.js  (+8 more)
stockglide/app/: globals.css  layout.tsx  page.tsx
stockglide/app/api/: login.ts  profile.ts
stockglide/app/dashboard/: page.tsx
stockglide/app/profile/: page.tsx
stockglide/components/auth/: LoginForm.tsx  RegisterForm.tsx
stockglide/components/layout/: Footer.tsx  Header.tsx
stockglide/components/profile/: ProfileDisplay.tsx
stockglide/components/ui/: Button.tsx  Input.tsx  Navbar.tsx
stockglide/lib/: auth.ts  data-fetching.ts  db.ts  utils.ts
stockglide/types/: api.ts  user.ts
(+212 files in other folders)
